--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,31 @@
     <title>React App</title>
   </head>
   <body>
+    <style>
+      .loadingContainer {
+        position: fixed !important;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 10000;
+        margin: 0 !important;
+        border: 0 !important;
+        padding: 0 !important;
+        transition: all 0.5s ease;
+        opacity: 1;
+      }
+      .load--hide {
+        opacity: 0;
+        display: none;
+      }
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <section class="ui segment loadingContainer">
+      <section class="ui active dimmer">
+        <section class="ui medium text loader">Loading...</section>
+      </section>
+    </section>
     <div id="root"></div>
     <!--
       This HTML file is a template.
