--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <meta http-equiv="pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- <link
+      href="https://fonts.googleapis.com/css?family=Amarante|Trirong"
+      rel="stylesheet"
+    /> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
