--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     /> -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Atheneum website which helps people find books"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Atheneum__favicon.svg" />
     <link
@@ -45,7 +45,7 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> -->
-    <title>React App</title>
+    <title>Atheneum</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
